[package]
name = "dropmutt-site"
version = "0.1.0"
authors = ["asonix <asonix.dev@gmail.com>"]

[dependencies]
actix = "0.5"
actix-web = "0.5"
bytes = "0.4.6"
diesel = { version = "1.1", features = ["postgres"] }
env_logger = "0.5"
failure = "0.1"
futures = "0.1.21"
futures-cpupool = "0.1"
futures-fs = { version = "0.0.3", git = "https://github.com/asonix/futures-fs", branch = "add-constructors" }
http = "0.1.5"
log = "0.4"
mime = "0.3.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"
