[package]
name = "dropmutt-site"
version = "0.1.0"
authors = ["asonix <asonix.dev@gmail.com>"]

[dependencies]
actix = "0.5"
actix-web = "0.5"
actix-form-data = "0.1.2"
bcrypt = "0.2.0"
bytes = "0.4.6"
diesel = { version = "1.1", features = ["postgres", "r2d2"] }
dotenv = "0.11"
env_logger = "0.5"
failure = "0.1"
futures = "0.1.21"
futures-cpupool = "0.1"
futures-fs = "0.0.4"
http = "0.1.5"
image = "0.19"
log = "0.4"
mime = "0.3.5"
mime_guess = "2.0.0-alpha.4"
r2d2 = "0.8"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"
